pod/meteor/vanilla/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meteor
  namespace: meteor-vanilla
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: meteor
  replicas: ${METEOR_VANILLA_REPLICAS}
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: meteor
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - image: 789470191893.dkr.ecr.${AWS_REGION}.amazonaws.com/uws:meteor-vanilla-${METEOR_APP}
          imagePullPolicy: IfNotPresent
          name: meteor
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 3000
            runAsGroup: 3000
          volumeMounts:
            - name: appenv
              mountPath: "/run/meteor"
              readOnly: true
          resources:
            requests:
              cpu: ${METEOR_VANILLA_CPU}m
            limits:
              cpu: ${METEOR_VANILLA_CPU}m
          readinessProbe:
            exec:
              command:
                - node
                - --version
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: appenv
          secret:
            secretName: appenv
---
apiVersion: v1
kind: Service
metadata:
  name: meteor
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor1
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor2
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor3
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor4
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor5
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor6
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor7
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor8
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteor9
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteora
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteorb
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteorc
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteord
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteore
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteorf
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteorg
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteorh
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteori
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
---
apiVersion: v1
kind: Service
metadata:
  name: meteorj
  namespace: meteor-vanilla
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: meteor
